--- a/Agentjo_customizationwrapper.ipynb
+++ b/Agentjo_customizationwrapper.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set up API key and do the necessary imports\n",
     "from agentjo import *\n",
+    "import os\n",
+    "\n",
+    "# this is only if you use OpenAI as your LLM\n",
+    "# os.environ['OPENAI_API_KEY'] = '<YOUR API KEY HERE>'\n",
     "\n",
     "def llm(system_prompt: str, user_prompt: str) -> str:\n",
     "    ''' Here, we use OpenAI for illustration, you can change it to your own LLM '''\n",
@@ -28,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,10 +48,14 @@
     "        super().__init__(**agent.__dict__)  # Inherit all of the attributes of the passed agent\n",
     "        # Initiatlize the functions\n",
     "        self.assign_functions(list(agent.function_map.values()))\n",
+    "\n",
+    "        # Initiatlize the custom functions\n",
     "        self.custom_functions = custom_functions\n",
     "        self.assign_custom_functions()\n",
     "\n",
     "    def assign_custom_functions(self):\n",
+    "        #Make every custom function a Function. They are not added to the agents function_map\n",
+    "\n",
     "        #ensure all keys are in custom_functions and other keys dont exist\n",
     "        expected_keys = ['on_run','before_subtask','subtask_completed','on_reply_user']\n",
     "        for key in self.custom_functions.keys():\n",
@@ -73,8 +82,8 @@
     "\n",
     "\n",
     "    def use_custom_functions(self,phase):\n",
+    "        # Use the custom functions in the phase in a stateful way\n",
     "\n",
-    "        #use the custom functions in the phase\n",
     "        if phase in self.custom_functions:\n",
     "            functions = self.custom_functions[phase]\n",
     "            if len(functions) >0:\n",
@@ -126,7 +135,9 @@
     "    def custom_run(self, task: str = '', overall_task: str = '', num_subtasks: int = 0) -> list:\n",
     "        ''' Attempts to do the task using LLM and available functions\n",
     "        Loops through and performs either a function call or LLM call up to num_subtasks number of times\n",
-    "        If overall_task is filled, then we store it to pass to the inner agents for more context '''\n",
+    "        If overall_task is filled, then we store it to pass to the inner agents for more context \n",
+    "        \n",
+    "        Custom functions are run during each phase of the task execution, if given'''\n",
     "            \n",
     "        # Assign the task\n",
     "        if task != '':\n",
@@ -141,6 +152,7 @@
     "        if num_subtasks == 0:\n",
     "            num_subtasks = self.max_subtasks\n",
     "        \n",
+    "        # Run the custom function for on_run\n",
     "        self.use_custom_functions('on_run')\n",
     "\n",
     "        # if task completed, then exit\n",
@@ -155,6 +167,7 @@
     "            # otherwise do the task\n",
     "            for i in range(num_subtasks):\n",
     "                \n",
+    "                # Run the custom function for before_subtask\n",
     "                self.use_custom_functions('before_subtask')\n",
     "\n",
     "                # Determine next subtask, or if task is complete. Always execute if it is the first subtask\n",
@@ -172,6 +185,7 @@
     "                # Execute the function for next step\n",
     "                res = self.use_function(function_name, function_params, subtask)\n",
     "                \n",
+    "                # Stateful collection of function outcomes\n",
     "                self.use_custom_functions('subtask_completed')\n",
     "\n",
     "                # Summarise Subtasks Completed if necessary\n",
@@ -186,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -205,8 +219,8 @@
       "Calling function add_item_to_inventory with parameters {'item': 'oranges'}\n",
       "> {'output_1': 'oranges successfully added to Inventory'}\n",
       "\n",
-      "\u001b[1m\u001b[30mObservation: The items \"apples\" and \"oranges\" have already been successfully added to the Inventory as per the subtasks completed.\u001b[0m\n",
-      "\u001b[1m\u001b[32mThoughts: Since the task was to add apples and oranges, and both have been added successfully, the assigned task is complete.\u001b[0m\n",
+      "\u001b[1m\u001b[30mObservation: The task was to add apples and oranges to the inventory. Both items have been successfully added to the inventory as per the completed subtasks.\u001b[0m\n",
+      "\u001b[1m\u001b[32mThoughts: Since the task was to add apples and oranges and both have been successfully added, the assigned task is complete. There is no further action required.\u001b[0m\n",
       "\u001b[1m\u001b[34mSubtask identified: End Task\u001b[0m\n",
       "Task completed successfully!\n",
       "\n"
@@ -238,33 +252,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling functions for phase: on_run\n",
-      "['add_item_to_inventory', 'add_item_to_inventory', 'use_llm', 'end_task']\n",
+      "Calling functions for phase: on_run\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[31mPlan ['add_item_to_inventory', 'add_item_to_inventory', 'use_llm', 'end_task']\u001b[0m\n",
       "\u001b[1m\u001b[30mObservation: The plan indicates that the task is to add apples and oranges to the inventory. The inventory is currently empty, so both items need to be added.\u001b[0m\n",
-      "\u001b[1m\u001b[32mThoughts: Since the inventory is empty, I need to add apples first as per the plan. After adding apples, I will proceed to add oranges.\u001b[0m\n",
+      "\u001b[1m\u001b[32mThoughts: To complete the task, I need to add both apples and oranges to the inventory. Since the inventory is empty, I can proceed to add apples first, followed by oranges.\u001b[0m\n",
       "\u001b[1m\u001b[34mSubtask identified: Add apples to the inventory.\u001b[0m\n",
       "Calling function add_item_to_inventory with parameters {'item': 'apples'}\n",
       "> {'output_1': 'apples successfully added to Inventory'}\n",
       "\n",
       "Calling functions for phase: subtask_completed\n",
-      "The progress towards the main task of adding apples and oranges is partially complete. The subtask of adding apples to the inventory has been successfully completed. However, the task of adding oranges is still pending. Additionally, there is a step involving the use of a language model (use_llm) that has not been addressed yet. To move forward, I need to focus on completing the addition of oranges to the inventory and determine the purpose and execution of the use_llm step. Once these are completed, I can proceed to the end_task step to finalize the process.\n",
-      "\u001b[1m\u001b[30mObservation: The task of adding apples to the inventory has been successfully completed. However, the task of adding oranges is still pending. Additionally, there is a step involving the use of a language model (use_llm) that has not been addressed yet.\u001b[0m\n",
-      "\u001b[1m\u001b[32mThoughts: To complete the assigned task, I need to add oranges to the inventory. The use_llm step seems unnecessary for the current task of adding items to the inventory, so I will focus on adding oranges first. Once oranges are added, I can evaluate if the task is complete.\u001b[0m\n",
+      "\u001b[1m\u001b[31mReflection The task of adding apples to the inventory has been successfully completed, which is a positive step towards achieving the main task. However, the task of adding oranges to the inventory is still pending. The plan indicates that the next step is to add another item to the inventory, which should be oranges. It is important to ensure that the process for adding oranges is executed correctly to complete the main task. Additionally, the plan includes using an LLM and ending the task, which suggests that there might be further steps or checks needed after adding the items. Overall, progress is being made, but attention should be given to completing all subtasks as outlined in the plan.\u001b[0m\n",
+      "\u001b[1m\u001b[30mObservation: The task of adding apples to the inventory has been successfully completed. However, the task of adding oranges to the inventory is still pending. The plan indicates that the next step is to add another item to the inventory, which should be oranges.\u001b[0m\n",
+      "\u001b[1m\u001b[32mThoughts: To complete the assigned task, the next step is to add oranges to the inventory. This will fulfill the requirement of adding both apples and oranges as specified in the task.\u001b[0m\n",
       "\u001b[1m\u001b[34mSubtask identified: Add oranges to the inventory.\u001b[0m\n",
       "Calling function add_item_to_inventory with parameters {'item': 'oranges'}\n",
       "> {'output_1': 'oranges successfully added to Inventory'}\n",
       "\n",
       "Calling functions for phase: subtask_completed\n",
-      "The progress towards the main task of adding apples and oranges is now complete. Both apples and oranges have been successfully added to the inventory. The next step involves understanding and executing the use_llm task, which has not been addressed yet. It is important to determine the purpose of this step and how it fits into the overall task. Once the use_llm step is completed, I can proceed to the end_task step to finalize the process.\n",
-      "\u001b[1m\u001b[30mObservation: The task of adding apples and oranges to the inventory has been successfully completed. However, there is a pending step involving the use of a language model (use_llm) that has not been addressed yet. The purpose and necessity of this step in the context of the assigned task are unclear.\u001b[0m\n",
-      "\u001b[1m\u001b[32mThoughts: Since the main task of adding apples and oranges is complete, the use_llm step seems unnecessary for the current task. It might have been included in the plan by mistake or for a different purpose. Therefore, I should proceed to finalize the task.\u001b[0m\n",
+      "\u001b[1m\u001b[31mReflection The main task of adding apples and oranges to the inventory has been successfully completed. Both apples and oranges have been added to the inventory as per the plan. The next steps in the plan involve using an LLM and ending the task, which suggests that there might be additional checks or processes to finalize the task. It is important to ensure that these steps are executed correctly to fully complete the main task. Overall, significant progress has been made, and the task is nearing completion.\u001b[0m\n",
+      "\u001b[1m\u001b[30mObservation: The main task of adding apples and oranges to the inventory has been successfully completed. Both items have been added as per the plan. The remaining steps involve using an LLM and ending the task, which suggests there might be additional checks or processes to finalize the task.\u001b[0m\n",
+      "\u001b[1m\u001b[32mThoughts: Since the main task of adding apples and oranges is completed, the next logical step is to finalize the task. The plan indicates using an LLM, which might be for verification or additional processing, followed by ending the task. However, since the task of adding items is complete, the most appropriate action now is to end the task.\u001b[0m\n",
       "\u001b[1m\u001b[34mSubtask identified: End Task\u001b[0m\n",
       "Task completed successfully!\n",
       "\n"
@@ -273,13 +293,13 @@
    ],
    "source": [
     "def reflect(shared_variables) -> str:\n",
-    "    '''Produces a thought about the task'''\n",
+    "    '''Produces a reflection about the task'''\n",
     "    agent = shared_variables['agent']\n",
     "    res = strict_json(system_prompt = f'''Reflect on the progress towards your main task {agent.overall_task} \\n Subtasks Completed: ```{agent.subtasks_completed}```''',\n",
     "                        user_prompt = '',\n",
     "                        output_format = {'Reflection': 'Your reflections, type: str'},\n",
     "                        llm = llm)\n",
-    "    print(res['Reflection'])\n",
+    "    print(colored(f\"Reflection {res['Reflection']}\",'red',attrs=['bold']))\n",
     "    return res['Reflection']\n",
     "\n",
     "def plan(shared_variables) -> str:\n",
@@ -290,7 +310,7 @@
     "                        user_prompt = '',\n",
     "                        output_format = {'Plan': 'List of function names to run in order, type: list'},\n",
     "                        llm = llm)\n",
-    "    print(res['Plan'])\n",
+    "    print(colored(f\"Plan {res['Plan']}\",'red',attrs=['bold']))\n",
     "    return res['Plan']\n",
     "\n",
     "my_agent = Agent('Inventory Manager', \n",
